add fbdev shell

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,12 @@ target_sources(app PRIVATE
   src/zperf_udp_uploader.c
   src/zperf_tcp_receiver.c
   src/zperf_tcp_uploader.c
+  src/btn_actions.c
+  src/shell_fbdev.c
+  src/tft_terminal.c
   )
 
 target_include_directories(app PRIVATE
   ${ZEPHYR_BASE}/subsys/net/ip
   )
+  target_include_directories(app PRIVATE ${ZEPHYR_BASE}/drivers/display)
