--- a/prj.conf
+++ b/prj.conf
@@ -1,6 +1,6 @@
 CONFIG_SERIAL=y
 CONFIG_SPI=y
-CONFIG_I2C=y
+# CONFIG_I2C=y
 CONFIG_GPIO=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
@@ -16,11 +16,11 @@ CONFIG_LOG_IMMEDIATE=y
 CONFIG_SHELL=y
 CONFIG_GPIO_SHELL=y
 CONFIG_SENSOR=y
-CONFIG_OPT3001=y
-CONFIG_LIS2DH=y
-CONFIG_LIS2DH_OPER_MODE_LOW_POWER=n
-CONFIG_HDC20X0=y
-CONFIG_BME680=y
+# CONFIG_OPT3001=y
+# CONFIG_LIS2DH=y
+# CONFIG_LIS2DH_OPER_MODE_LOW_POWER=n
+# CONFIG_HDC20X0=y
+# CONFIG_BME680=y
 CONFIG_IEEE802154=y
 CONFIG_NETWORKING=y
 CONFIG_NET_HOSTNAME_ENABLE=y
@@ -34,9 +34,9 @@ CONFIG_NET_MAX_CONTEXTS=5
 CONFIG_NET_CONTEXT_SYNC_RECV=y
 CONFIG_NET_CONTEXT_NET_PKT_POOL=y
 CONFIG_NET_PKT_RX_COUNT=14
-CONFIG_NET_PKT_TX_COUNT=128
+CONFIG_NET_PKT_TX_COUNT=90
 CONFIG_NET_BUF_RX_COUNT=28
-CONFIG_NET_BUF_TX_COUNT=128
+CONFIG_NET_BUF_TX_COUNT=90
 CONFIG_NET_STATISTICS=y
 CONFIG_NET_LOG=y
 CONFIG_MDNS_RESPONDER=y
@@ -73,3 +73,7 @@ CONFIG_MAX_PTHREAD_COUNT=16
 CONFIG_PTHREAD_DYNAMIC_STACK=y
 CONFIG_NET_IPV6_FRAGMENT=y
 CONFIG_NET_L2_IEEE802154_FRAGMENT_REASS_CACHE_SIZE=6
+
+CONFIG_HEAP_MEM_POOL_SIZE=16384
+CONFIG_DISPLAY=y
+CONFIG_ILI9340=y
